<resources>
    <string name="app_name">Cullina</string>
    <string name="get_started">Taste the World in One Tap</string>
    <string name="start_now">Start now</string>
    <string name="sign_up">Sign up</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="login_user">Login User</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="full_name">Name Lengkap</string>
    <string name="halo_user">Halo %s</string>
    <string name="makanan">Makanan</string>
    <string name="pesanan_saya">Pesanan saya:</string>
    <string name="kirim">Kirim</string>
    <string name="alamat_pengiriman">Alamat Pengiriman</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="alamat">Alamat</string>
    <string name="patokan_alamat">Patokan alamat lengkap</string>
    <string name="order_dan_kirim">Order dan Kirim</string>
    <string name="terima_kasih">Terima kasih sudah memesan dan mohon tunggu dilokasi sampai kurir mengirimkan pesanan anda</string>
    <string name="kembali_ke_home">Kembali ke Home</string>
</resources>