<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alamat_pengiriman"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/text_primary"
            android:layout_marginBottom="24dp" />

        <EditText
            android:id="@+id/etNamaLengkap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nama_lengkap"
            android:textColor="@color/black"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"
            android:padding="12dp"
            android:background="@drawable/edittext_border"/>

        <EditText
            android:id="@+id/etAlamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/alamat"
            android:textColor="@color/black"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:padding="12dp"
            android:background="@drawable/edittext_border"/>

        <EditText
            android:id="@+id/etPatokan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/patokan_alamat"
            android:textColor="@color/black"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:padding="12dp"
            android:background="@drawable/edittext_border" />

        <Button
            android:id="@+id/btnOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order_dan_kirim"
            android:textAllCaps="false"
            android:textColor="@color/background_color"
            android:textSize="16sp"
            android:fontFamily="sans-serif-medium"
            android:paddingVertical="12dp"
            android:backgroundTint="@color/black"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="8dp" />

    </LinearLayout>

</ScrollView>