<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    android:background="@color/background_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Unlock the flavors and discover"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginTop="20dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="your favorite dishes with the most"
        android:textColor="@color/black"
        android:gravity="center" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="intuitive food ordering app."
        android:textColor="@color/black"
        android:gravity="center" />
    </LinearLayout>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/background_color"
        android:textSize="16sp"
        android:fontFamily="sans-serif-medium"
        android:paddingVertical="12dp"
        android:backgroundTint="@color/black" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/background_color"
        android:textSize="16sp"
        android:fontFamily="sans-serif-medium"
        android:paddingVertical="12dp"
        android:backgroundTint="@color/teal_700"
        android:layout_marginBottom="30dp" />

</LinearLayout>